--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-flask==1.1.4
-numpy==1.23.4
-librosa==0.10.0
-matplotlib==3.6.1
-pandas==1.3.5
-tensorflow==2.12.0
-keras==2.12.0
+Flask
+numpy
+librosa
+matplotlib
+pandas
+tensorflow
+keras
+requests
+gunicorn
